# low-rank-matrix-factorization

./: README.md  pyproject.toml
examples/: effect_of_convolution.py  gridsearch.py  mse_convolution.py  phase_shifted.py  rank_selection.py
src/lmc/: convergence.py  utils.py
src/lmc/factor_model/: __init__.py  _base.py  cmc.py  larsmc.py  lmc.py  scmc.py  tvmc.py  wcmc.py
tests/: test_base.py  test_cmc.py  test_scmc.py  test_utils.py
