[build-system]
requires = [
    "setuptools==70.3.0",
    "setuptools-scm[toml]==8.1.0",
    "wheel==0.40.0",
]

build-backend = "setuptools.build_meta"

[project]
name = "lmc"
version = "0.1.0"
description = "Low-rank matrix completion."
classifiers = [
    "Programming Language :: Python :: 3",
]
readme = "README.md"
requires-python = "<3.11"
dependencies = [
    "numpy==1.23.5",
    "pandas==2.2.2",
    "scipy==1.14.0",
    "seaborn==0.13.2",
    "openpyxl==3.1.5",
    "matplotlib==3.9.2",
    "scikit-learn==1.5.2",
    "tensorflow==2.12.0"
]

#[tool.setuptools_scm]

[project.optional-dependencies]
dev = [
    "black==24.4.2",
    "coverage>=7.5.4",
    "pip-tools>=7.1.0",
    "pytest-cov>=5.0.0",
    "pytest-env>=1.1.3",
    "pytest>=8.3.2",
    "types-setuptools>=70.3.0",
    "ruff>=0.5.2",
    "mypy==1.10.1",
    "hypothesis==6.111.1",
    "isort==5.13.2",
    "pre-commit==4.0.1",
    "flake8==4.0.1"
]

[tool.pytest.ini_options]
addopts = "-rsx -q --cov=src/lmc --cov-append --tb=short --ignore=setup.py"
pythonpath = ["src"]
norecursedirs = [
    "venv",
]

[tool.setuptools]
package-dir = {"" = "src"}
packages = [
    "lmc",
    "lmc.factor_model",
]

[tool.black]
line-length = 88
target-version = ['py36', 'py37', 'py38']
include = '\.pyi?$'
exclude = '''

(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.venv
    | _build
    | buck-out
    | build
    | (.*)/migrations
    | dist
  )/
)
'''

[tool.mypy]
exclude = ["venv", "build"]

[tool.ruff]
line-length = 88 # Same as black
